infra/jenkins/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-external
  namespace: biddinggo
subsets:
  - addresses:
      - ip: 172.27.0.116
    ports:
      - name: http
        port: 8081
