infra/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: biddinggo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jenkins.bidding-go.shop
      secretName: jenkins-tls

  rules:
    - host: jenkins.bidding-go.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-external
                port:
                  number: 8080
